<resources>
    <string name="app_name">悦动音符</string>

    <string name="key_switch_mode_spinner_value" translatable="false">key_switch_mode_spinner_value</string>

    <string name="permission_private" translatable="false">com.xhbb.qinzl.pleasantnote.permission_private</string>

    <string name="default_my_icon_file_name" translatable="false">my_icon_default.jpg</string>

    <string name="format_time">%1$02d:%2$02d</string>

    <string name="popular_song_tab">热歌</string>
    <string name="western_countries_tab">欧美</string>
    <string name="mainland_tab">大陆</string>
    <string name="hong_kong_and_taiwan_tab">港台</string>
    <string name="korea_tab">韩国</string>
    <string name="japan_tab">日本</string>
    <string name="ballad_tab">民谣</string>
    <string name="rocking_tab">摇滚</string>
    <string name="sales_tab">销量</string>

    <string name="my_favorited_nav">我的收藏</string>
    <string name="recently_played_nav">最近播放</string>

    <string name="local_song_menu">本地歌曲</string>

    <string name="my_icon_accessibility">我的头像</string>
    <string name="open_drawer_accessibility">打开导航抽屉</string>
    <string name="close_drawer_accessibility">关闭导航抽屉</string>
    <string name="music_image_accessibility">音乐图片</string>
    <string name="previous_song_accessibility">上一首歌曲</string>
    <string name="next_song_accessibility">下一首歌曲</string>
    <string name="pause_accessibility">暂停</string>
    <string name="play_accessibility">播放</string>
    <string name="download_music_accessibility">下载音乐</string>
    <string name="list_loop_accessibility">列表循环</string>
    <string name="random_play_accessibility">随机播放</string>
    <string name="single_cycle_accessibility">单曲循环</string>
    <string name="select_box_accessibility">选择框</string>

    <string name="network_error_text">连网失败，请检查网络！</string>
    <string name="scrolled_to_end_text">已经到底啦</string>
    <string name="refreshing_text">快上音乐！</string>
    <string name="empty_data_text">暂无相关内容，我们将继续完善，敬请期待。^_^</string>
    <string name="default_play_duration_text">00:00</string>

    <string name="background_task_channel">后台任务</string>
    <string name="download_task_channel">下载任务</string>

    <string name="delete_button">删除</string>
    <string name="batch_management_button">批量管理</string>
    <string name="cancel_button">取消</string>
    <string name="confirm_button">确定</string>
    <string name="take_picture_button">拍照</string>
    <string name="select_image_button">选择图片</string>

    <string name="permission_denied_toast">您拒绝了此项授权</string>
    <string name="start_download_music_toast">开始下载音乐</string>
    <string name="local_song_data_is_empty_toast">您还没有下载本地音乐</string>
    <string name="no_select_song_toast">您没有选择歌曲</string>
    <string name="song_un_downloaded_toast">歌曲未下载</string>
    <string name="location_permission_denied_toast">您拒绝了定位授权</string>
    <string name="camera_unavailable_toast">拍照功能不可用</string>
    <string name="select_image_unavailable_toast">选择图片功能不可用</string>

    <string name="delete_song_dialog_message">您确定要删除所有选中歌曲吗？</string>
    <string name="delete_dialog_title">删除确认</string>

    <string name="music_search_hint">歌曲/歌手</string>

    <string name="music_playing_notification_content">正在后台播放音乐</string>

    <string name="select_all_check_box">全选</string>
</resources>
