<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xhbb.qinzl.pleasantnote.LocalSongActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <Button
                android:id="@+id/batchManageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/batch_management_button"
                app:backgroundTint="@color/colorPrimaryDark"/>

            <CheckBox
                android:id="@+id/selectAllCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:button="@null"
                android:drawableEnd="?android:listChoiceIndicatorMultiple"
                android:drawableRight="?android:listChoiceIndicatorMultiple"
                android:text="@string/select_all_check_box"
                android:visibility="gone"
                tools:layout_gravity="center"
                tools:visibility="visible"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cancel_button"
                android:visibility="gone"
                app:backgroundTint="@color/colorPrimaryDark"
                tools:visibility="visible"/>
        </FrameLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottomPlayFragmentHeight"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.v7.widget.Toolbar
        android:id="@+id/bottomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/delete_button"
            app:backgroundTint="@color/colorPrimaryDark"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/bottom_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        tools:layout="@layout/fragment_bottom_play"/>
</android.support.design.widget.CoordinatorLayout>
