<!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragmentBottomPlay"
            type="com.xhbb.qinzl.pleasantnote.layoutbinding.FragmentBottomPlay"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomPlayFragmentHeight"
        android:background="@drawable/selector_bottom_play_fragment"
        android:onClick="@{()->fragmentBottomPlay.onClickBottomPlayFragment()}"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:layout_gravity="bottom">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/musicImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/music_image_accessibility"
            android:url="@{fragmentBottomPlay.imageUrl}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/musicName"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/my_icon_default"/>

        <TextView
            android:id="@+id/musicName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:text="@{fragmentBottomPlay.musicName}"
            android:textAppearance="@android:style/TextAppearance.Widget.TextView"
            app:layout_constraintBottom_toTopOf="@+id/singerName"
            app:layout_constraintLeft_toRightOf="@+id/musicImage"
            app:layout_constraintRight_toLeftOf="@+id/playSwitcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="海阔天空"/>

        <TextView
            android:id="@+id/singerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="1"
            android:text="@{fragmentBottomPlay.singer}"
            android:typeface="monospace"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/musicName"
            app:layout_constraintRight_toRightOf="@+id/musicName"
            app:layout_constraintTop_toBottomOf="@+id/musicName"
            tools:text="Beyond"/>

        <ViewSwitcher
            android:id="@+id/playSwitcher"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:displayedChild="@{fragmentBottomPlay.playSwitcherDisplayedChild}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toLeftOf="@+id/nextButton"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bottom_play_fragment_button"
                android:contentDescription="@string/play_accessibility"
                android:onClick="@{()->fragmentBottomPlay.onClickPlayButton()}"
                android:src="@drawable/ic_play"
                android:tint="@color/appBarContent"/>

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bottom_play_fragment_button"
                android:contentDescription="@string/pause_accessibility"
                android:onClick="@{()->fragmentBottomPlay.onClickPauseButton()}"
                android:src="@drawable/ic_pause"
                android:tint="@color/appBarContent"/>
        </ViewSwitcher>

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/selector_bottom_play_fragment_button"
            android:contentDescription="@string/next_song_accessibility"
            android:onClick="@{()->fragmentBottomPlay.onClickNextButton()}"
            android:src="@drawable/ic_skip_next_big"
            android:tint="@color/appBarContent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</layout>