<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activityPlay"
            type="com.xhbb.qinzl.pleasantnote.layoutbinding.ActivityPlay"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:context="@{activityPlay.context}"
                android:displayHomeAsUpEnabled="@{true}"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@{activityPlay.bigPicture}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:background="@drawable/empty_image">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:lineSpacingExtra="16dp"
                        android:paddingBottom="252dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="32dp"
                        android:text="@{activityPlay.lyrics}"
                        android:textColor="@{activityPlay.lyricsColor}"
                        android:textSize="20sp"
                        tools:text="第一行\n第二行"/>
                </android.support.v4.widget.NestedScrollView>
            </FrameLayout>
        </android.support.v4.widget.SwipeRefreshLayout>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:clickable="true"
            android:src="@drawable/ic_no_favorited"
            android:tint="@color/floatingButtonSrc"
            app:fabSize="mini"
            app:layout_anchor="@id/body"
            app:layout_anchorGravity="bottom|end"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/colorPrimary"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_anchor="@id/body"
            app:layout_anchorGravity="bottom">

            <Chronometer
                android:id="@+id/playChrononmeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:format="00:00"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ProgressBar
                android:id="@+id/playProgress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/playChrononmeter"
                app:layout_constraintLeft_toRightOf="@+id/playChrononmeter"
                app:layout_constraintRight_toLeftOf="@+id/playDuration"
                app:layout_constraintTop_toTopOf="@+id/playChrononmeter"/>

            <TextView
                android:id="@+id/playDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAppearance="@android:style/TextAppearance.Widget.TextView"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/playChrononmeter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playChrononmeter"
                tools:text="03:14"/>

            <View
                android:id="@+id/dividingView"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playChrononmeter"/>

            <Spinner
                android:id="@+id/playSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adapter="@{activityPlay.playSpinnerAdater}"
                android:popupBackground="@color/colorPrimary"
                android:selection="@{activityPlay.spinnerSelection}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividingView"/>

            <ImageButton
                android:id="@+id/playPreviousButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_bottom_play_fragment_button"
                android:contentDescription="@string/previous_song_accessibility"
                android:src="@drawable/ic_skip_previous"
                android:tint="@color/appBarContent"
                app:layout_constraintBottom_toBottomOf="@+id/playOrPauseSwitcher"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintRight_toLeftOf="@+id/playOrPauseSwitcher"
                app:layout_constraintTop_toTopOf="@+id/playOrPauseSwitcher"/>

            <ViewSwitcher
                android:id="@+id/playOrPauseSwitcher"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividingView">

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_bottom_play_fragment_button"
                    android:contentDescription="@string/play_accessibility"
                    android:src="@drawable/ic_play_circle"
                    android:tint="@color/appBarContent"/>

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/selector_bottom_play_fragment_button"
                    android:contentDescription="@string/pause_accessibility"
                    android:keepScreenOn="true"
                    android:src="@drawable/ic_pause_circle"
                    android:tint="@color/appBarContent"/>
            </ViewSwitcher>

            <ImageButton
                android:id="@+id/playNextButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_bottom_play_fragment_button"
                android:contentDescription="@string/next_song_accessibility"
                android:src="@drawable/ic_skip_next"
                android:tint="@color/appBarContent"
                app:layout_constraintBottom_toBottomOf="@+id/playOrPauseSwitcher"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toRightOf="@+id/playOrPauseSwitcher"
                app:layout_constraintTop_toTopOf="@+id/playOrPauseSwitcher"/>

            <ImageButton
                android:id="@+id/downloadButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/selector_bottom_play_fragment_button"
                android:contentDescription="@string/download_music_accessibility"
                android:src="@drawable/ic_file_download"
                android:tint="@color/appBarContent"
                app:layout_constraintBottom_toBottomOf="@+id/playOrPauseSwitcher"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/playOrPauseSwitcher"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
